--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name ="startbutton_rot">	#FF6347 </color>
+    <color name ="seekarte_blau">	 #0097f1 </color>
+    <color name="colorBackground">#BCAAA4</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
