--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,6 +8,7 @@
     android:padding="16dp"
     tools:context=".Quiz">
 
+
     <TextView
         android:id="@+id/text_view_score"
         android:layout_width="wrap_content"
@@ -16,11 +17,11 @@
         android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/text_view_frage_count"
+        android:id="@+id/text_view_question_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_view_score"
-        android:text="Frage: 1/x"
+        android:text="Question: 1/x"
         android:textColor="@android:color/black" />
 
     <TextView
@@ -28,21 +29,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:text="00:30"
         android:textColor="@android:color/black"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:layout_alignParentRight="true" />
 
     <TextView
-        android:id="@+id/text_view_frage"
+        android:id="@+id/text_view_question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/radio_group"
-        android:text="Hier wird dann der Fragentext stehen \n Hier wird dann der Fragentext stehen\n "
+        android:layout_marginBottom="16dp"
+        android:text="Here will be the question text\nHere will be the question text\nHere will be the question text"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="20sp" />
-
+        android:textSize="20sp"
+        android:gravity="center_horizontal" />
 
     <RadioGroup
         android:id="@+id/radio_group"
@@ -54,25 +56,19 @@
             android:id="@+id/radio_button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Option1" />
+            android:text="Option 1" />
 
         <RadioButton
             android:id="@+id/radio_button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Option2" />
+            android:text="Option 2" />
 
         <RadioButton
             android:id="@+id/radio_button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Option3" />
-
-        <RadioButton
-            android:id="@+id/radio_button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Option4" />
+            android:text="Option 3" />
 
     </RadioGroup>
 
@@ -81,6 +77,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/radio_group"
-        android:text="Bestaetigen"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="Confirm" />
 </RelativeLayout>
