--- a/app/src/main/res/layout/activity_main_menue.xml
+++ b/app/src/main/res/layout/activity_main_menue.xml
@@ -27,6 +27,7 @@
         android:layout_marginBottom="33dp"
         android:text="Leinen los!"
         app:layout_constraintBottom_toTopOf="@+id/bt_statistik"
+        android:background="@drawable/round_button_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="30dp"
+        android:background="@drawable/round_button_background"
         android:text="Statistik"
         app:layout_constraintBottom_toTopOf="@+id/bt_einstellungen"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,6 +55,7 @@
         android:layout_marginBottom="276dp"
         android:text="Einstellungen"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/round_button_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
