--- a/app/src/main/res/layout/activity_main_menue.xml
+++ b/app/src/main/res/layout/activity_main_menue.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main_menue">
+    tools:context=".Main_menue"
+    android:background="@color/colorBackground_braun">
 
     <TextView
         android:id="@+id/tv_willkommen"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:layout_marginBottom="42dp"
-        android:text="Willkommen XY!!"
+        android:layout_marginBottom="45dp"
+        android:textSize="30sp"
+        android:text="@string/tv_willkommen_an_board"
+        android:textColor="@color/cardview_dark_background"
         app:layout_constraintBottom_toTopOf="@+id/bt_leinen_los"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -25,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
         android:layout_marginBottom="33dp"
-        android:text="Leinen los!"
+        android:text="@string/bt_leinen_los"
         app:layout_constraintBottom_toTopOf="@+id/bt_statistik"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -38,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="30dp"
-        android:text="Statistik"
+        android:text="@string/bt_statistik"
         app:layout_constraintBottom_toTopOf="@+id/bt_einstellungen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -51,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="276dp"
-        android:text="Einstellungen"
+        android:text="@string/bt_einstellungen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
