--- a/app/src/main/res/layout/activity_seekarte.xml
+++ b/app/src/main/res/layout/activity_seekarte.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Seekarte2">
+    tools:context=".Seekarte" >
 
     <RelativeLayout
         android:id="@+id/header"
@@ -18,8 +18,7 @@
             android:id="@+id/header_Background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/desc"
-            app:srcCompat="@android:color/holo_blue_light" />
+            android:contentDescription="@string/desc" />
 
         <ImageView
             android:id="@+id/header_Holzbrett"
@@ -43,10 +42,11 @@
             android:layout_marginLeft="-2dp"
             android:layout_marginEnd="3dp"
             android:layout_marginRight="3dp"
-            android:text="@string/Seekarte"
+            android:text="@string/seekarte"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
-            android:textSize="35sp" />
+            android:textSize="35sp"
+            android:gravity="center_horizontal" />
     </RelativeLayout>
 
 
@@ -56,14 +56,12 @@
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:contentDescription="@string/desc"
-        android:visibility="visible"
-        app:srcCompat="@android:color/holo_blue_light" />
+        android:visibility="visible" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:fillViewport="true">
+        android:layout_marginTop="50dp">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -76,7 +74,7 @@
 
 
             <ImageButton
-                android:id="@+id/insel_Basics"
+                android:id="@+id/insel_grundlagen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -98,13 +96,13 @@
                 android:id="@+id/basics_Themen"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:text="@string/basics"
+                android:text="@string/grundlagen"
                 android:textSize="20sp"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.16"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/insel_Basics"
+                app:layout_constraintTop_toBottomOf="@+id/insel_grundlagen"
                 app:layout_goneMarginStart="56dp"
                 tools:layout_conversion_absoluteHeight="0dp"
                 tools:layout_conversion_absoluteWidth="0dp" />
@@ -119,7 +117,7 @@
                 android:contentDescription="@string/desc"
                 android:src="@drawable/ic_piratenschiff"
                 app:layout_constraintBottom_toTopOf="@+id/insel_Ben"
-                app:layout_constraintLeft_toLeftOf="@+id/insel_Basics"
+                app:layout_constraintLeft_toLeftOf="@+id/insel_grundlagen"
                 tools:layout_conversion_absoluteHeight="68dp"
                 tools:layout_conversion_absoluteWidth="144dp" />
 
