--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#795548</color>
+    <color name="colorPrimaryDark">#5D4037</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorButton">#DC1313</color>
+    <color name="colorTextfeldHintergrund">#FFFFFF</color>
+    <color name="colorBackground_schwarz_start">#000000</color>
 
-    <color name="black_overlay">#66000000</color>
+
+    <color name="colorBackground_braun">#E9DDC5</color>
 </resources>
