--- a/app/src/main/res/layout/activity_bordbuch_grundlagen.xml
+++ b/app/src/main/res/layout/activity_bordbuch_grundlagen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorBackground_braun">
+    android:background="@color/colorBackground">
 
     <TextView
         android:id="@+id/tv_bordbuch"
@@ -25,6 +25,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
+        android:textColor="@android:color/background_dark"
         android:text="@string/underheadline_bordbuch_grundlagen"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="@id/tv_bordbuch" />
@@ -58,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_bordbuch"
             android:layout_centerHorizontal="true"
+            android:ems="10"
             android:text="@string/large_text_grundlagen"/>
 
     </ScrollView>
