--- a/app/src/main/res/layout/activity_logbuch_grundlagen.xml
+++ b/app/src/main/res/layout/activity_logbuch_grundlagen.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Main_menue"
-    android:background="@color/colorBackground_braun">
+    android:orientation="vertical"
+    android:background="@color/colorBackground">
 
 
     <TextView
