--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:background="@color/color_start_schwarz">
 
     <Button
-        android:id="@+id/start_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/bt_start"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Start"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:layout_marginTop="500dp"
+        android:layout_marginBottom="183dp"
+        android:text="@string/bt_start"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        android:gravity="center_horizontal" />
+
+    <ImageView
+        android:id="@+id/iv_logo"
+        android:layout_width="406dp"
+        android:layout_height="386dp"
+        android:layout_marginTop="89dp"
+        android:layout_marginBottom="25dp"
+        android:contentDescription="@string/desc"
+        android:src="@drawable/logo_lostatc"
+        app:layout_constraintBottom_toTopOf="@+id/bt_start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
