--- a/app/src/main/res/layout/activity_main_menue.xml
+++ b/app/src/main/res/layout/activity_main_menue.xml
@@ -5,17 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Main_menue"
-    android:background="@color/colorBackground_braun">
+    android:orientation="vertical"
+    android:background="@color/colorBackground">
 
     <TextView
         android:id="@+id/tv_willkommen"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="242dp"
+        android:layout_height="48dp"
         android:layout_marginTop="150dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="42dp"
+        app:fontFamily="@font/geschwungen"
+        android:text="Willkommen XY!!"
+        android:textColor="@android:color/background_dark"
         android:textSize="30sp"
-        android:text="@string/tv_willkommen_an_board"
-        android:textColor="@color/cardview_dark_background"
         app:layout_constraintBottom_toTopOf="@+id/bt_leinen_los"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -68,8 +70,20 @@
         android:layout_marginStart="2dp"
         android:layout_marginLeft="2dp"
         android:layout_marginTop="2dp"
+        android:textColor="@android:color/background_dark"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_willkommen" />
+
+    <ImageView
+        android:id="@+id/iv_schatztruhe"
+        android:layout_width="155dp"
+        android:layout_height="110dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_willkommen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/schatz1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
