--- a/app/src/main/res/layout/activity_crew.xml
+++ b/app/src/main/res/layout/activity_crew.xml
@@ -6,10 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    tools:ignore="ContentDescription"
+    tools:context=".Crew">
+
 
     <TextView
-        android:id="@+id/tv_crew"
+        android:id="@+id/tv_einstellungen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -26,10 +29,11 @@
         android:id="@+id/iv_bild1"
         android:layout_width="83dp"
         android:layout_height="128dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="60dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild3"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@drawable/pirat3" />
@@ -39,8 +43,8 @@
         android:layout_width="84dp"
         android:layout_height="126dp"
         android:layout_marginTop="200dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginBottom="84dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +59,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild5"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild1"
         tools:srcCompat="@drawable/pirat1" />
@@ -63,8 +68,10 @@
         android:id="@+id/iv_bild4"
         android:layout_width="83dp"
         android:layout_height="128dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginBottom="233dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,6 +87,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild3"
         tools:srcCompat="@drawable/piratenbraut" />
@@ -89,13 +97,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="115dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginRight="149dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginRight="120dp"
         android:layout_marginBottom="103dp"
         android:text="@string/txt_name1"
-        app:fontFamily="@font/geschwungen"
+        android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
-        android:textColor="@color/cardview_dark_background"
+        app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toTopOf="@+id/tv_name3"
         app:layout_constraintEnd_toStartOf="@+id/iv_bild2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -106,29 +114,30 @@
         android:id="@+id/tv_name2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginLeft="170dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
         android:layout_marginTop="180dp"
+        android:gravity="end"
         android:text="@string/txt_name2"
-        app:fontFamily="@font/geschwungen"
+        android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
-        android:textColor="@color/cardview_dark_background"
+        app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toTopOf="@+id/tv_name4"
         app:layout_constraintEnd_toStartOf="@+id/iv_bild2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_crew" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_einstellungen" />
 
     <TextView
         android:id="@+id/tv_name3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="240dp"
-        android:layout_marginRight="240dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginRight="200dp"
         android:layout_marginBottom="100dp"
         android:text="@string/txt_name3"
-        app:fontFamily="@font/geschwungen"
+        android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
-        android:textColor="@color/cardview_dark_background"
+        app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toTopOf="@+id/tv_name5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -139,14 +148,15 @@
         android:id="@+id/tv_name4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="232dp"
-        android:layout_marginLeft="232dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginLeft="220dp"
         android:layout_marginTop="170dp"
         android:layout_marginBottom="270dp"
+        android:gravity="end"
         android:text="@string/txt_name4"
-        app:fontFamily="@font/geschwungen"
+        android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
-        android:textColor="@color/cardview_dark_background"
+        app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iv_bild4"
         app:layout_constraintStart_toStartOf="parent"
@@ -156,14 +166,17 @@
         android:id="@+id/tv_name5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="83dp"
+        android:layout_marginRight="83dp"
         android:layout_marginBottom="150dp"
         android:text="@string/txt_name5"
-        app:fontFamily="@font/geschwungen"
+        android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
+        app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_bild4"
         app:layout_constraintStart_toEndOf="@+id/iv_bild5"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name3"
-        android:textColor="@color/cardview_dark_background"  />
+        app:layout_constraintTop_toBottomOf="@+id/tv_name3" />
 
     <ImageView
         android:id="@+id/iv_jack6"
