Statistik Layout erstellt und verbunden

--- a/app/src/main/res/layout/activity_statistik.xml
+++ b/app/src/main/res/layout/activity_statistik.xml
@@ -6,25 +6,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#AC9270">
+    android:background="#AC9270"
+    tools:context=".Statistik">
 
     <TextView
         android:id="@+id/tv_schatz_des_hollaenders"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
-        android:text="Schatz des Holländers!"
+        android:text="@string/tv_schatz"
         android:textColor="@android:color/background_dark"
+        android:textSize="40sp"
         app:fontFamily="@font/geschwungen"
-        android:textSize="45sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_gesamtfortschritt"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_diamant2" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/iv_diamant1"
         android:layout_width="94dp"
         android:layout_height="89dp"
         android:layout_marginStart="33dp"
@@ -32,28 +34,33 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView6"
+        android:contentDescription="@string/desc"
+        app:layout_constraintEnd_toStartOf="@+id/iv_diamant2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/diamant2" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/iv_diamant3"
         android:layout_width="94dp"
         android:layout_height="89dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
+        android:contentDescription="@string/desc"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toEndOf="@+id/iv_diamant2"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/diamant2" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/iv_diamant2"
         android:layout_width="162dp"
         android:layout_height="130dp"
         android:layout_marginTop="6dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/desc"
+        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -63,14 +70,12 @@
         android:id="@+id/tv_gesamtfortschritt"
         android:layout_width="400dp"
         android:layout_height="81dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="492dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="Hier siehst du deinen Gesamtfortschritt:"
+        android:text="@string/tv_gesamtfortschritt"
         android:textColor="@android:color/background_dark"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="25sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
