--- a/app/src/main/res/layout/activity_bordbuch_grundlagen.xml
+++ b/app/src/main/res/layout/activity_bordbuch_grundlagen.xml
@@ -10,31 +10,32 @@
     tools:context=".Bordbuch">
 
     <TextView
-        android:id="@+id/tv_bordbuch"
-        android:text="@string/headline_bordbuch"
+        android:id="@+id/tv_bordbuch_grundlagen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:gravity="center_horizontal"
+        android:text="@string/headline_bordbuch"
         android:textColor="@android:color/background_dark"
-        android:textStyle="bold"
         android:textSize="35sp"
-        android:layout_marginTop="16dp"/>
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_grundlagen"
+        android:id="@+id/tv_headline_bordbuch_grundlagen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="74dp"
-        android:textColor="@android:color/background_dark"
+        android:layout_marginTop="93dp"
+        android:layout_marginBottom="159dp"
         android:text="@string/underheadline_bordbuch_grundlagen"
+        android:textColor="@android:color/background_dark"
         android:textSize="25sp"
-        app:layout_constraintTop_toTopOf="@id/tv_bordbuch" />
+        app:layout_constraintTop_toTopOf="@id/tv_bordbuch_grundlagen" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/iv_Rechenoperatoren"
         android:layout_width="375dp"
         android:layout_height="129dp"
         android:layout_alignParentTop="true"
@@ -48,22 +49,21 @@
         app:srcCompat="@drawable/tabelle" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="475dp"
-        android:layout_below="@+id/imageView3"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="-19dp"
-        android:layout_marginBottom="0dp">
+        android:layout_width="371dp"
+        android:layout_height="477dp"
+        android:layout_below="@+id/iv_Rechenoperatoren"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-23dp"
+        android:layout_marginBottom="6dp">
 
 
-        <EditText
-            android:id="@+id/et_grundlagen"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_txt_bordbuch_grundlagen"
+            android:layout_width="380dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_bordbuch"
-            android:layout_centerHorizontal="true"
-            android:ems="10"
-            android:text="@string/large_text_grundlagen"/>
+            android:ems="20"
+            android:text="@string/large_text_grundlagen"
+            android:textColor="@android:color/background_dark" />
 
     </ScrollView>
 
