--- a/app/src/main/res/layout/activity_logbuch.xml
+++ b/app/src/main/res/layout/activity_logbuch.xml
@@ -9,18 +9,17 @@
     android:background="@color/colorBackground">
 
 
-
     <TextView
         android:id="@+id/tv_Logbucheintrag"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="164dp"
-        android:text="Logbucheintrag"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="13dp"
+        android:text="@string/headline_logbuch"
         android:textColor="@android:color/background_dark"
         android:textSize="35sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
+        app:layout_constraintBottom_toTopOf="@+id/tv_Kapitel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,27 +29,39 @@
         android:id="@+id/tv_Kapitel"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Grundlagen"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/grundlagen"
         android:textColor="@android:color/background_dark"
         android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/iv_piratenschiff_log"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/iv_piratenschiff_log"
+        android:layout_width="218dp"
+        android:layout_height="153dp"
+        android:contentDescription="@string/desc"
         app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.477" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Kapitel"
+        app:srcCompat="@drawable/piratenschiff" />
 
     <Button
         android:id="@+id/bt_Bordbuch"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
-        android:text="Bordbuch"
-        app:layout_constraintBottom_toTopOf="@+id/bt_Abfrage"
         android:background="@color/colorButton"
+        android:text="@string/bt_bordbuch"
+        app:layout_constraintBottom_toTopOf="@+id/bt_Abfrage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -59,8 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
         android:layout_marginBottom="42dp"
-        android:text="Abfrage"
         android:background="@color/colorButton"
+        android:text="@string/bt_abfrage"
         app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -71,15 +82,15 @@
         android:id="@+id/bt_Prüfung"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="42dp"
-        android:layout_marginBottom="276dp"
-        android:text="Prüfung"
+        android:layout_marginBottom="100dp"
         android:background="@color/colorButton"
+        android:text="@string/bt_prüfung"
+        android:textColor="@android:color/background_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:textColor="@android:color/background_dark"
-        android:layout_centerHorizontal="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_Bordbuch"
         app:layout_constraintVertical_bias="1.0" />
