--- a/app/src/main/res/layout/activity_bordbuch_grundlagen.xml
+++ b/app/src/main/res/layout/activity_bordbuch_grundlagen.xml
@@ -1,66 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    tools:context=".Bordbuch">
+
+    <ImageButton
+        android:id="@+id/ib_backBordbuch"
+        android:layout_width="59dp"
+        android:layout_height="58dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
+        android:layout_marginBottom="103dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@mipmap/ic_backbutton_foreground"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/tv_bordbuch"
-        android:text="@string/headline_bordbuch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:gravity="center_horizontal"
+        android:text="@string/headline_bordbuch"
         android:textColor="@android:color/background_dark"
-        android:textStyle="bold"
         android:textSize="35sp"
-        android:layout_marginTop="16dp"/>
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_grundlagen"
+        android:id="@+id/tv_BordbuchKapitel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
         android:textColor="@android:color/background_dark"
-        android:text="@string/underheadline_bordbuch_grundlagen"
+        android:text="Hier steht das Kapitel"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="@id/tv_bordbuch" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="375dp"
-        android:layout_height="129dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="155dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="32dp"
-        app:srcCompat="@drawable/tabelle" />
 
     <ScrollView
+        android:id="@+id/sv_Bordbuch_Grundlagen"
         android:layout_width="match_parent"
-        android:layout_height="475dp"
-        android:layout_below="@+id/imageView3"
+        android:layout_height="610dp"
+        android:layout_below="@+id/tv_BordbuchKapitel"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="-19dp"
+        android:layout_marginTop="13dp"
         android:layout_marginBottom="0dp">
 
 
-        <EditText
-            android:id="@+id/et_grundlagen"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_bordbuch"
-            android:layout_centerHorizontal="true"
-            android:ems="10"
-            android:text="@string/large_text_grundlagen"/>
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="375dp"
+                android:layout_height="129dp"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/tabelle" />
+
+
+            <EditText
+                android:id="@+id/et_grundlagen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
+                android:ems="10"
+                android:text="@string/large_text_grundlagen"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
