--- a/app/src/main/res/layout/activity_crew.xml
+++ b/app/src/main/res/layout/activity_crew.xml
@@ -8,6 +8,23 @@
     android:orientation="vertical"
     android:background="@color/colorBackground">
 
+    <ImageButton
+        android:id="@+id/ib_backCrew"
+        android:layout_width="59dp"
+        android:layout_height="58dp"
+        android:layout_marginEnd="43dp"
+        android:background="@null"
+        android:layout_marginRight="43dp"
+        android:layout_marginBottom="103dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@mipmap/ic_backbutton_foreground"
+        android:contentDescription="TODO" />
+
     <TextView
         android:id="@+id/tv_crew"
         android:layout_width="wrap_content"
