--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,6 +8,24 @@
     android:padding="16dp"
     tools:context=".Quiz">
 
+
+    <ImageButton
+        android:id="@+id/ib_backQuiz"
+        android:layout_width="59dp"
+        android:layout_height="58dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="-9dp"
+        android:layout_marginLeft="-9dp"
+        android:layout_marginTop="-11dp"
+        android:layout_marginEnd="340dp"
+        android:layout_marginRight="354dp"
+        android:background="@null"
+        app:srcCompat="@mipmap/ic_backbutton_foreground" />
+
     <TextView
         android:id="@+id/text_view_question"
         android:layout_width="match_parent"
@@ -51,14 +69,18 @@
             android:text="Option 4" />
 
     </RadioGroup>
+
     <ProgressBar
         android:id="@+id/pb_Quiz"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="133dp">
 
     </ProgressBar>
-        <Button
+
+    <Button
         android:id="@+id/button_confirm_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
