--- a/app/src/main/res/layout/activity_seekarte2.xml
+++ b/app/src/main/res/layout/activity_seekarte2.xml
@@ -32,7 +32,6 @@
             android:scaleY="0.95"
             android:src="@drawable/holzbrett1" />
 
-
         <TextView
             android:id="@+id/header_Seekarte"
             android:layout_width="match_parent"
@@ -45,11 +44,20 @@
             android:layout_marginLeft="-2dp"
             android:layout_marginEnd="3dp"
             android:layout_marginRight="3dp"
+            android:gravity="center_horizontal"
             android:text="@string/seekarte"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
-            android:textSize="35sp"
-            android:gravity="center_horizontal" />
+            android:textSize="35sp" />
+
+        <ImageButton
+            android:id="@+id/ib_backSeekarte"
+            android:layout_width="59dp"
+            android:layout_height="58dp"
+            android:background="@null"
+            app:srcCompat="@mipmap/ic_backbutton_foreground" />
+
+
     </RelativeLayout>
 
 
